repo-deployments/ingress/ingress-adjectives-rate-demo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adjectives-rate-ingress
  namespace: apigw
spec:
  ingressClassName: nginx
  rules:
  - host: rate-limit-demo.demo-it.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigw-microapigw 
            port:
              number: 80
