repo-deployments/ingress/ingress-frontend-demo-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress-api
  namespace: api
spec:
  ingressClassName: nginx
  rules:
  - host: front-1-api.demo-it.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-api
            port:
              number: 80
