repo-deployments/ingress/ingress-frontend-demo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: api
spec:
  ingressClassName: nginx
  rules:
  - host: front-1.demo-it.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
